Clean project again

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <meta name="theme-color" content="#212121">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-  <title>Posicionaterd</title>
+  <title>AppName</title>
 
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,900' rel='stylesheet' type='text/css'>
 
